fix: Font Awesome icon not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,3 +208,9 @@ section.your-active-class .landing__container::after {
     transform: rotate(360deg) translate(-1em) rotate(-360deg);
   }
 }
+
+.address::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f3c5";
+}
